--- a/mail.html
+++ b/mail.html
@@ -27,7 +27,7 @@
                         Thật ra t cũng k biết tại sao á quen nhau chắc chưa  dc tháng ha. 
                         Tự dưng tỏ tình cũng hơi kỳ  (TCACATBQQ). T kiểu ẩn mình với xã hội ý 
                         nhưng chả biết sao có một cảm giác rất thoải mái với m 
-                        có lẽ là k iu nhưng chắc chắn là dung động mất rồi.
+                        có lẽ là chưa iu nhưng chắc chắn là dung động mất rồi.
                         Vẫn còn một câu á .
                         Nếu gặp lại thì nói nha còn k thì thôi ha.
                         <br>
